v1.1 Finished Solved bug: Not showing multiple icons

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -10,10 +10,10 @@ body {
   justify-content: space-evenly;
   position: absolute;
   width: 550px;
-height: 868px;
-left: 65px;
-top: 53px;
-background: #23252C;
+  height: 868px;
+  left: 65px;
+  top: 53px;
+  background: #23252c;
 }
 
 code {
@@ -35,7 +35,10 @@ code {
 .photo {
   display: flex;
   justify-content: center;
-  border-radius: 10px 10px 0px 0px;
+}
+.me{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 .about,
 .interest {
@@ -48,47 +51,67 @@ code {
   margin: 17px;
   font-size: 14px;
 }
-.linkedin{
+.linkedin {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 9px 13px 9px 11px;
+  /* padding: 9px 13px 9px 11px; */
   gap: 8px;
-  background: #5093E2;
+  background: #5093e2;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  padding: 15px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+.linkedBtn {
+  background-color: #5093e2;
+  color: white;
+  border: #5093e2;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
+.email {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 22px;
+  margin-right: -5px;
+  padding-top: 16.5px;
+  padding-bottom: 17px;
+  gap: 8px;
+  background: #ffffff;
+  border: 1px solid #d1d5db;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
 }
-.email{
-  display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 9px 13px 9px 11px;
-gap: 8px;
-background: #FFFFFF;
-border: 1px solid #D1D5DB;
-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-border-radius: 6px;
+.emailIMG {
+  color: black;
 }
-.emailIMG{
-  background-color: red;
-}
-.emailBtn{
-  border: #FFFFFF;
-  background-color: #FFFFFF;
+.emailBtn {
+  border: #ffffff;
+  background-color: #ffffff;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
 }
 .buttons {
   box-sizing: border-box;
   display: flex;
+  justify-content: center;
+  width: 115px;
+  height: 34px;
+  margin-bottom: 34px;
 }
 .name {
-  padding-top: 21px;
   padding-left: 70px;
   padding-right: 70px;
   font-style: normal;
   font-weight: 700;
-  font-size: 25px;
+  font-size: 24px;
   line-height: 30px;
   text-align: center;
 }
@@ -110,18 +133,32 @@ border-radius: 6px;
   text-align: center;
   color: #f5f5f5;
 }
-.headAbout, .headInterest{
-font-weight: 700;
-font-size: 16px;
-line-height: 150%;
-color: #f5f5f5;
+.headAbout,
+.headInterest {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: #f5f5f5;
 }
-.pAbout, .iAbout{
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 10.24px;
-line-height: 150%;
-color: #DCDCDC;
+.pAbout,
+.iAbout {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 150%;
+  text-align: justify;
+  color: #dcdcdc;
+}
+.footer{
+  bottom: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  gap: -20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #161619;
+  width: 317px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
